--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .pyc
 __pycache__
+routes/__pycache__/admin.cpython-313.pyc
+routes/__pycache__/user.cpython-313.pyc
+__pycache__/__init__.cpython-313.pyc
+routes/__pycache__/user.cpython-313.pyc
